k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
    - host: catalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
    - host: recommender.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommender-service
                port:
                  number: 80
